[tool.poetry]
name = "stat_filter"
version = "0.1.0"
description = "A statistical filter to detect smooth periods in time series."
authors = ["Rich Inman <rinman24@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
flake8 = "^6.1.0"
isort = "^5.12.0"
pydocstyle = "^6.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
skip_gitignore = true

[tool.pydocstyle]
convention = "numpy"
match = '(?!test_).*\.py'
